--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -16,13 +16,13 @@ type ServicesProps = {
 ---
 
 <section id="services">
-    <Container className="space-y-10 md:sapce-y-12">
+    <Container className="space-y-10 md:space-y-12">
         <div class="text-center max-w-3xl mx-auto space-y-4">
-            <Title>
+            <Title font-['Roboto']>
                 What we offer
             </Title>
-            <Paragraph>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <Paragraph className="font-['Roboto']">
+                We provide comprehensive digital solutions tailored to your needs. Our services are designed to elevate your brand and enhance your digital presence.
             </Paragraph>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
