--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -1,188 +1,165 @@
 ---
-import GroupFooterNav from "../blocks/GroupFooterNav.astro";
 import Container from "../shared/Container.astro";
-import FooterNav from "../shared/FooterNav.astro";
-import Paragraph from "../shared/Paragraph.astro";
-const footerNav1 = [
-    {
-        itemText:"Marketing",
-        itemLink:"#"
-    },
-    {
-        itemText:"Analylitics",
-        itemLink:"#"
-    },
-    {
-        itemText:"Commerce",
-        itemLink:"#"
-    },
-    {
-        itemText:"Insights",
-        itemLink:"#"
-    }
-]
 
-const footerSupport = [
+const footerNav = [
     {
-        itemText:"Pricing",
-        itemLink:"#"
+        title: "Company",
+        items: [
+            {
+                title: "Contact",
+                link: "#cta"
+            }
+        ]
     },
     {
-        itemText:"Guides",
-        itemLink:"#"
+        title: "Services",
+        items: [
+            {
+                title: "Web Development",
+                link: "#services"
+            },
+            {
+                title: "Photo & Video Editing",
+                link: "#services"
+            },
+            {
+                title: "Branding",
+                link: "#services"
+            },
+        ]
     },
     {
-        itemText:"FAQ",
-        itemLink:"#"
-    },
-    {
-        itemText:"Contact",
-        itemLink:"#"
+        title: "Support",
+        items: [
+            {
+                title: "Pricing",
+                link: "#pricing"
+            },
+            {
+                title: "Contact",
+                link: "#cta"
+            }
+        ]
     }
-]
+];
 
-const footerCompany = [
+const socialLinks = [
     {
-        itemText:"About",
-        itemLink:"/about"
+        name: "LinkedIn",
+        url: "https://www.linkedin.com/company/carthago-digital-works/",
+        icon: `<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>`
     },
     {
-        itemText:"Blog",
-        itemLink:"#"
+        name: "Instagram",
+        url: "https://www.instagram.com/carthago.dw/",
+        icon: `<path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>`
     },
     {
-        itemText:"Jobs",
-        itemLink:"#"
-    },
-    {
-        itemText:"Parteners",
-        itemLink:"#"
-    },
-    {
-        itemText:"Jobs",
-        itemLink:"#"
+        name: "Facebook",
+        url: "https://www.facebook.com/carthago.dw",
+        icon: `<path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>`
     }
-]
-const footerLegal = [
-    {
-        itemText:"Claim",
-        itemLink:"/#"
-    },
-    {
-        itemText:"Privacy",
-        itemLink:"#"
-    },
-    {
-        itemText:"Terms",
-        itemLink:"#"
-    }
-]
+];
 ---
-<div class="mt-16"></div>
-<footer class="relative  bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900 pt-28 rounded-t-3xl">
-    <div class="absolute right-0 top-0 h-full w-full flex justify-end">
-        <div class="w-28 h-28 overflow-auto flex rounded-xl relative blur-2xl">
-            <span
-              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
-            ></span>
-            <span
-              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
-            ></span>
-            <span
-              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
-            ></span>
-          </div>
-      </div>
 
-      <div class="absolute left-0 bottom-0 h-full w-full flex items-end">
-        <div class="w-28 h-28 overflow-auto flex rounded-xl relative blur-2xl">
-            <span
-              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
-            ></span>
-            <span
-              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
-            ></span>
-            <span
-              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
-            ></span>
-          </div>
-      </div>
-    <Container className="pb-8 relative overflow-auto">
-        
-        <span class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 blur-2xl opacity-20 w-24 h-16 sm:w-48 sm:h-36 rounded-full rotate-12 skew-x-6 bg-primary"></span>
-        <div class="grid grid-cols-2 lg:grid-cols-3 lg:items-stretch gap-8 relative">
-            <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
-                <div class="h-full">
-                    <a href="#" class="relative flex items-center gap-3">
-                        <div class="relative w-7 h-7 overflow-auto flex rounded-xl">
-                            <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -left-1 bg-primary rounded-md rotate-45"></span>
-                            <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
-                        </div>
-                        <div class="inline-flex text-lg font-semibold text-heading-1">
-                            AgenceX
+<footer class="relative bg-gradient-to-tr from-box-bg/10 to-gray-50/5 dark:from-gray-900/20 dark:to-gray-800/10 backdrop-blur-2xl pt-28 rounded-t-3xl">
+    <Container className="relative z-10">
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-12 lg:gap-8 pb-16 border-b border-heading-3/10">
+            <!-- Company Info -->
+            <div class="lg:col-span-5 xl:col-span-6">
+                <div class="flex flex-col items-center lg:items-start max-w-2xl mx-auto lg:mx-0">
+                    <a href="/" class="flex items-center gap-6 mb-8">
+                        <img 
+                            src="/images/Mediamodifier-Design-Template.png" 
+                            alt="Carthago Digital Works Logo" 
+                            width="100" 
+                            height="100" 
+                            class="object-contain"
+                        />
+                        <div class="text-3xl font-bold text-heading-1 font-['Roboto']">
+                            Carthago<br/>Digital Works
                         </div>
                     </a>
-                    <Paragraph className={"mt-8"}>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
-                    </Paragraph>
-                </div>
-
-                <!-- social links -->
-                <div class="min-h-max flex items-center gap-4 text-heading-3 mt-8">
-                    <a href="#" class="transition hover:text-heading-1 hover:scale-105">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-                        </svg>
-                        <span class="sr-only">social link</span>
-                    </a>
-
-                    <a href="#" class="transition hover:text-heading-1 hover:scale-105">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                        </svg>
-                        <span class="sr-only">social link</span>
-                    </a>
-
-                    <a href="#" class="transition hover:text-heading-1 hover:scale-105">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                            <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-                        </svg>
-                        <span class="sr-only">social link</span>
-                    </a>
-
-                    <a href="#" class="transition hover:text-heading-1 hover:scale-105">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="w-5 h-5" viewBox="0 0 16 16">
-                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                        </svg>
-                        <span class="sr-only">social link</span>
-                    </a>
+                    <p class="text-heading-3 text-center lg:text-left mb-10 text-lg leading-relaxed">
+                        Transforming ideas into digital excellence. We specialize in creating innovative web solutions and digital strategies that drive business growth. Our team of experts is dedicated to delivering exceptional results for our clients.
+                    </p>
+                    <div class="flex gap-8">
+                        {socialLinks.map(social => (
+                            <a 
+                                href={social.url}
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                class="text-heading-3 hover:text-primary transition-all duration-300 transform hover:scale-110"
+                                aria-label={social.name}
+                            >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 16 16">
+                                    <Fragment set:html={social.icon} />
+                                </svg>
+                            </a>
+                        ))}
+                    </div>
                 </div>
             </div>
 
-            <GroupFooterNav>
-                <FooterNav title={"Company"} navItems={footerCompany}/>
-                <FooterNav title={"Solutions"} navItems={footerNav1}/>
-            </GroupFooterNav>
+            <!-- Navigation -->
+            <nav class="lg:col-span-7 xl:col-span-6 grid grid-cols-1 sm:grid-cols-3 gap-12 lg:gap-8 lg:pl-8 xl:pl-12 lg:border-l border-heading-3/10">
+                {footerNav.map(section => (
+                    <div class="flex flex-col">
+                        <h3 class="text-xl font-semibold text-heading-1 mb-6">{section.title}</h3>
+                        <ul class="space-y-4 flex-grow">
+                            {section.items.map(item => (
+                                <li>
+                                    <a 
+                                        href={item.link}
+                                        class="text-heading-3 hover:text-primary transition-all duration-300 inline-block hover:translate-x-1"
+                                    >
+                                        {item.title}
+                                    </a>
+                                </li>
+                            ))}
+                        </ul>
+                    </div>
+                ))}
+            </nav>
+        </div>
 
-            <GroupFooterNav>
-                <FooterNav title={"Support"} navItems={footerSupport}/>
-                <FooterNav title={"Ressources"} navItems={footerLegal}/>
-            </GroupFooterNav>
-
+        <!-- Copyright -->
+        <div class="py-8">
+            <div class="flex flex-col md:flex-row justify-between items-center gap-4 text-heading-3">
+                <p class="text-base md:text-lg">&copy; <span id="year"></span> Carthago Digital Works. All rights reserved</p>
+                <p class="text-base md:text-lg">Crafted with ❤️ by <a href="/" class="text-primary hover:text-primary/80 transition-colors duration-200 font-semibold">Carthago Digital Works</a></p>
+            </div>
         </div>
     </Container>
-    <div class=" bg-gradient-to-tl from-box-bg py-2 relative">
-        <Container>
-            <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
-                <div>
-                    &copy; <span id="year"></span> AgenceX. All right reserved
-                </div>
-                <div>
-                    Proudly made by <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">John Kat</a>
-                </div>
-            </div>
-        </Container>
+
+    <!-- Enhanced Background Decoration with adjusted transparency -->
+    <div class="absolute inset-0 pointer-events-none overflow-hidden">
+        <!-- Top right blur -->
+        <div class="absolute -right-40 -top-40 blur-[150px] opacity-30 dark:opacity-40">
+            <div class="w-[600px] h-[600px] rounded-full bg-gradient-to-br from-primary/20 via-primary/10 to-transparent dark:from-primary/30 dark:via-primary/20"></div>
+        </div>
+        
+        <!-- Bottom left blur -->
+        <div class="absolute -left-40 -bottom-40 blur-[150px] opacity-30 dark:opacity-40">
+            <div class="w-[600px] h-[600px] rounded-full bg-gradient-to-tr from-secondary/20 via-secondary/10 to-transparent dark:from-secondary/30 dark:via-secondary/20"></div>
+        </div>
+        
+        <!-- Center blur -->
+        <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 blur-[180px] opacity-20 dark:opacity-30">
+            <div class="w-[800px] h-[800px] rounded-full bg-gradient-to-r from-primary/20 via-secondary/20 to-primary/20 dark:from-primary/20 dark:via-secondary/20 dark:to-primary/20"></div>
+        </div>
+
+        <!-- Adaptive overlay -->
+        <div class="absolute inset-0 bg-gradient-to-b from-transparent via-gray-50/5 to-gray-100/10 dark:via-gray-900/20 dark:to-gray-900/40 backdrop-blur-3xl"></div>
     </div>
+
+    <!-- Adaptive glass effect -->
+    <div class="absolute inset-0 bg-white/5 dark:bg-black/20 backdrop-blur-3xl pointer-events-none"></div>
+
+    <!-- Adaptive gradient overlay -->
+    <div class="absolute inset-0 bg-gradient-to-t from-gray-50/10 to-transparent dark:from-black/30 pointer-events-none"></div>
 </footer>
+
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear().toString();
+</script>
