--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -20,6 +20,10 @@ const navItems = [
         href:"#features",
         text:"Features"
     },
+    {
+        href:"#pricing",
+        text:"Pricing"
+    },
 ]
 ---
 
@@ -29,14 +33,15 @@ const navItems = [
             <!-- logo -->
             <div class="min-w-max inline-flex relative">
                 <a href="/" class="relative flex items-center gap-3">
-                    <div class="relative w-7 h-7 overflow-hidden flex rounded-xl">
-                        <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
-                        <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
-                        <span class="absolute w-4 h-4 -bottom-1 -left-1 bg-primary rounded-md rotate-45"></span>
-                        <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
-                    </div>
-                    <div class="inline-flex text-lg font-semibold text-heading-1">
-                        AgenceX
+                    <img 
+                            src="/images/Mediamodifier-Design-Template.png" 
+                            alt="Carthago Digital Works Logo" 
+                            width="80" 
+                            height="80" 
+                            class="flex-shrink-0 object-contain w-150 h-150"
+                        />
+                    <div class="inline-flex text-lg font-semibold text-heading-1" font-['Roboto']>
+                        Carthago DW.
                     </div>
                 </a>
             </div>
