--- a/src/components/sections/CTA.astro
+++ b/src/components/sections/CTA.astro
@@ -1,10 +1,9 @@
 ---
-import Button from "../shared/Button.astro";
 import Container from "../shared/Container.astro";
 import Paragraph from "../shared/Paragraph.astro";
 ---
 
-<section  id="cta" class="pb-20">
+<section id="cta" class="pb-20">
   <Container>
     <div
       class="w-full relative py-8 md:py-10 px-6 md:px-8 rounded-2xl bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900"
@@ -12,13 +11,13 @@ import Paragraph from "../shared/Paragraph.astro";
       <div class="absolute right-0 top-0 h-full w-full flex justify-end">
         <div class="w-28 h-28 overflow-auto flex rounded-xl relative blur-2xl">
             <span
-              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+              class="absolute w-16 h-16 -top-1 -right-1 bg-[#2B3A67] rounded-md rotate-45"
             ></span>
             <span
-              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#5671FF] rounded-md rotate-45"
             ></span>
             <span
-              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-[#2B3A67] rounded-md rotate-45"
             ></span>
           </div>
       </div>
@@ -26,31 +25,34 @@ import Paragraph from "../shared/Paragraph.astro";
       <div class="absolute left-0 bottom-0 h-full w-full flex items-end">
         <div class="w-28 h-28 overflow-auto flex rounded-xl relative blur-2xl">
             <span
-              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+              class="absolute w-16 h-16 -top-1 -right-1 bg-[#2B3A67] rounded-md rotate-45"
             ></span>
             <span
-              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#5671FF] rounded-md rotate-45"
             ></span>
             <span
-              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-[#2B3A67] rounded-md rotate-45"
             ></span>
           </div>
       </div>
       <div class="mx-auto text-center max-w-xl md:max-w-2xl relative">
         <h1
           class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight
-          font-bold text-heading-1"
+          font-bold text-heading-1 font-['Roboto']"
         >
-          Quick Start your <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">Strategic Digital</span> Marketing Campaing
+          Transform Your Digital Presence with <span class="text-transparent bg-clip-text bg-gradient-to-br from-[#2B3A67]  to-[#5671FF]">Carthago Digital Works</span> 
         </h1>
-        <Paragraph className={"pt-10"}>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente
-          delectus architecto ullam earum
+        <Paragraph className={"pt-10 font-['Roboto']"}>
+          Ready to elevate your brand? Let's create something exceptional together. 
+          High quality, fast delivery, and outstanding results await.
         </Paragraph>
         <div class="mx-auto max-w-md sm:max-w-xl pt-10">
-          <Button variant={"primary"}>
-            <span class="text-white relative z-[5]">Get In Touch</span>
-          </Button>
+          <button 
+            class="px-6 py-3.5 rounded-xl text-center font-medium bg-gradient-to-br from-[#2B3A67] to-[#5671FF] text-white hover:from-[#2B3A67]/90 hover:to-[#5671FF]/90 hover:shadow-lg hover:shadow-[#5671FF]/30 transition-all duration-300 transform hover:scale-[1.02]"
+            data-open-modal
+            data-plan="General Inquiry">
+            <span class="text-white relative z-[5] font-['Roboto']">Get In Touch</span>
+          </button>
         </div>
       </div>
     </div>
