--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import Features from '../components/sections/Features.astro';
 import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 import Pricing from "../components/sections/Pricing.astro";
+import CustomPack from "../components/sections/CustomPack.astro";
+import CustomPackModal from "../components/shared/CustomPackModal.astro";
 ---
 
 <Layout title="Welcome to AgenceX">
@@ -18,5 +20,7 @@ import Pricing from "../components/sections/Pricing.astro";
 		<Features/>
 		<CTA/>
 		<Pricing/>
+		<CustomPack />
+		<CustomPackModal />
 	</main>
 </Layout>
