--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -81,8 +81,7 @@ const socialLinks = [
                         </div>
                     </a>
                     <p class="text-heading-3 text-center lg:text-left mb-10 text-lg leading-relaxed">
-                        Transforming ideas into digital excellence. We specialize in creating innovative web solutions and digital strategies that drive business growth. Our team of experts is dedicated to delivering exceptional results for our clients.
-                    </p>
+                        We turn your ideas into digital wins. Our expert team crafts innovative web solutions and strategies to fuel your growth—delivered with passion, speed, and excellence. </p>
                     <div class="flex gap-8">
                         {socialLinks.map(social => (
                             <a 
