--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -13,23 +13,20 @@ import Title from "../shared/Title.astro";
                 Key Features of Our Digital Services
             </Title>
             <Paragraph className="mt-8 font-['Roboto']">
-                We deliver comprehensive digital solutions that transform your online presence. Our services combine innovation with reliability to ensure your success in the digital world.
-            </Paragraph>
-            <Paragraph className="mt-2 font-['Roboto']">
-                Each project is handled with precision and creativity, ensuring exceptional results that exceed expectations.
-            </Paragraph>
+                Our services blend innovation and reliability to transform your online presence. Every project reflects our commitment to precision, creativity, and results that exceed expectations. </Paragraph>
+            
             <ul class="mt-8 space-y-4 text-heading-3 font-['Roboto']">
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Professional Website Development
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Professional Website Development: Stunning sites that boost your visibility.
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Strategic Brand Design
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Strategic Brand Design: Identities that capture your essence.
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Expert Photo & Video Editing
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Expert Photo & Video Editing: Visuals that grab attention.
                 </li>
                 <li>
-                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Fast & Quality-Focused Delivery
+                    <span class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center">&checkmark;</span> Fast & Quality-Focused Delivery: Results you need, right on time.
                 </li>
             </ul>
         </div>
