--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -22,7 +22,7 @@ type ServicesProps = {
                 What we offer
             </Title>
             <Paragraph className="font-['Roboto']">
-                We provide comprehensive digital solutions tailored to your needs. Our services are designed to elevate your brand and enhance your digital presence.
+                Discover tailored digital solutions that elevate your brand with speed and precision. At Carthago Digital Works, we’re here to transform your online presence and deliver results that matter.
             </Paragraph>
         </div>
         <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
