--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -24,17 +24,16 @@ import Title from "../shared/Title.astro";
                 Quality and Speed: Our Core Values
             </Title>
             <Paragraph className="mt-8 font-['Roboto']">
-                At Carthago Digital Works, we're dedicated to delivering excellence in every project. Our commitment to exceptional quality and fast delivery sets us apart. We combine cutting-edge technology with creative expertise to transform your digital presence and drive tangible results for your business.
-            </Paragraph>
+                Quality and speed define us. At Carthago Digital Works, we use cutting-edge tech and creative expertise to deliver exceptional results—fast—transforming your digital presence with every project.</Paragraph>
             <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="Delivering high-quality solutions with unmatched speed and precision" title="Mission" className="font-['Roboto']">
+                <Info description="To empower businesses with top-tier digital solutions, delivered with speed and precision." title="Mission" className="font-['Roboto']">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                         </svg>                              
                     </span>
                 </Info>
-                <Info description="Setting new standards in digital excellence and client satisfaction" title="Vision" className="font-['Roboto']">
+                <Info description="To lead the way in digital innovation and delight clients with every success." title="Vision" className="font-['Roboto']">
                     <span slot="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
