--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -11,25 +11,18 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1 font-['Roboto']"
         >
-          12+
+          3+
         </h2>
         <p class="mt-2 text-heading-3 font-['Roboto']">Created projects</p>
       </div>
 
-      <div class="text-center">
-        <h2
-          class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1 font-['Roboto']"
-        >
-          200+
-        </h2>
-        <p class="mt-2 text-heading-3 font-['Roboto']">Projects</p>
-      </div>
+      
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1 font-['Roboto']"
         >
-          120
+          2+
         </h2>
         <p class="mt-2 text-heading-3 font-['Roboto']">Happy Client</p>
       </div>
@@ -38,9 +31,9 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1 font-['Roboto']"
         >
-          5+
+          2+
         </h2>
-        <p class="mt-2 text-heading-3 font-['Roboto']">Years</p>
+        <p class="mt-2 text-heading-3 font-['Roboto']">Months </p>
       </div>
     </div>
   </Container>
