--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -17,7 +17,6 @@ import Container from "../shared/Container.astro";
       </div>
 
       
-
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1 font-['Roboto']"
@@ -33,7 +32,7 @@ import Container from "../shared/Container.astro";
         >
           2+
         </h2>
-        <p class="mt-2 text-heading-3 font-['Roboto']">Months </p>
+        <p class="mt-2 text-heading-3 font-['Roboto']">Months of Excellence</p>
       </div>
     </div>
   </Container>
