--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -22,7 +22,7 @@ import ContactModal from "../shared/ContactModal.astro";
              Carthago Digital <span class="text-transparent bg-clip-text bg-gradient-to-br from-[#2B3A67]  to-[#5671FF]">Works</span>
             </h1>
             <Paragraph className="mt-8 font-['Roboto']">
-                Your partner in digital excellence. We deliver standout websites, bold branding, and stunning visuals—fast and flawlessly—to drive your business forward.
+                Carthago Digital Works: Your partner in digital excellence. We deliver standout websites, bold branding, and stunning visuals—fast and flawlessly—to drive your business forward.
             </Paragraph>
             <div class="mt-10  w-full flex max-w-md mx-auto lg:mx-0">
                 <div class="flex sm:flex-row flex-col gap-5 w-full">
